* Remove `Helpers.delim_only?`

== Unreleased
These changes are merged into the `main` branch but have not yet been tagged as a new version/release.

==== Breaking
* Removes Hash `conditions` parameter and `sep` parameter from `Merge::ConstantValueConditional` transform, replacing with lambda Proc `condition` parameter. In https://github.com/lyrasis/kiba-extend/pull/88[PR#88]

==== Added

* New service object classes in `Transforms::Helpers`: `DelimOnlyChecker`, `FieldValueGetter`, `RowFieldEvennessChecker`, `ValhashFieldEvennessChecker`, and `ValhashFieldEvennessFixer`. In https://github.com/lyrasis/kiba-extend/pull/92[PR#92]
* New transforms: `Warn::UnevenFields`, `Clean::EvenFieldValues`, `Delete::DelimiterOnlyFieldValues`, `Delete::EmptyFieldGroups`, `Deduplicate::FlagAll`, `Collapse::FieldsWithCustomFieldmap`, `Collapse::FieldsToRepeatableFieldGroup`, and `Collapse::FieldsToTypedFieldPair`. In https://github.com/lyrasis/kiba-extend/pull/92[PR#92]
* `stripextra` csv converter to do aggressive stripping of csv field values, _without_ converting 'NULL' strings to ``nilValue``s. In https://github.com/lyrasis/kiba-extend/pull/91[PR#91]
* `FilterRows::WithLambda` transform. In https://github.com/lyrasis/kiba-extend/pull/85[PR#85]
* `FilterRows::AllFieldsPopulated` transform. In https://github.com/lyrasis/kiba-extend/pull/85[PR#85]
* `FilterRows::AnyFieldsPopulated` transform. In https://github.com/lyrasis/kiba-extend/pull/85[PR#85]
* `ignore_case` parameter to `FilterRows::FieldMatchRegexp` transform. Defaults to `false` for backward compatibility. In https://github.com/lyrasis/kiba-extend/pull/85[PR#85]
* `Merge::ConstantValues` transform added. In https://github.com/lyrasis/kiba-extend/pull/84[PR#84]

==== Changed
* BUGFIX: `Clean::EmptyFieldGroups` was broken if `sep` = `|` and `use_nullvalue` = `true`. In https://github.com/lyrasis/kiba-extend/pull/92[PR#92]